# lurek_2d

./: .gitignore  2fse.json  38li.json  COMPLETION_CHECKLIST.md  CONTRIBUTING.md  CONTRIBUTING2.md  Cargo.toml  DaTq.json  EXECUTION_LOG.md  ErCV.toml  FILE  IMPLEMENTATION_SUMMARY.md  KoPE.ps1  LICENSE  README.md  README2.md  SECURITY.md  SYSTEM_COMPLETE.md  VC3h.toml  XHkg  Z5HO.bat  build.rs  build_check.txt  build_err_tmp.txt  build_out_tmp.txt  check_output.txt  demo_check.txt  diff.txt  errors.txt  fhTj  findings.json  fix.py  fix2.py  fix_all.py  fix_binary_api.py  fix_blank.py  fix_bom.py  fix_enc.py  fix_evidence.py  fix_final.py  (+37 more)
.agents/rules/: agent-audio-eng.md  agent-build-engineer.md  agent-cag-architect.md  agent-configurator.md  agent-content-maker.md  agent-discovery-lead.md  agent-doc-writer.md  agent-extension-engineer.md  agent-hacker.md  agent-lua-designer.md  agent-md.md  agent-optimizer.md  agent-physicist.md  agent-player.md  agent-rag-architect.md  agent-renderer.md  agent-research.md  agent-reviewer.md  agent-routing.md  agent-security.md  agent-solver.md  agent-spec-owner.md  analytics.md  asset-pipeline.md  build-system.md  cag-workflow.md  ci-cd-pipeline.md  cross-platform.md  demo-creation.md  dev-debugging.md  documentation.md  enterprise-architecture.md  error-handling.md  examples-management.md  game-ai.md  github-workflow.md  gpu-programming.md  html-css.md  library-authoring.md  logging.md  (+20 more)
.agents/workflows/: add-cag-artifact.md  add-visual-effect.md  analyze-game-telemetry.md  analyze-memory-usage.md  analyze-pathfinding-performance.md  analyze-physics-performance.md  analyze-render-performance.md  analyze-roadmap-phase.md  audit-module.md  audit-test-placement.md  author-ui-layout.md  create-ai-behavior.md  create-api-function.md  create-audio-feature.md  create-demo.md  create-draw-command.md  create-engine-module.md  create-event-pattern.md  create-game-example.md  create-integration-test.md  create-lua-example.md  create-physics-feature.md  create-roadmap-phase.md  create-test-suite.md  create-tilemap-feature.md  design-api-surface.md  design-game-ai.md  doc-api-reference.md  extend-vscode-extension.md  fix-api-function.md  fix-compilation-errors.md  fix-dependency-issue.md  fix-engine-bug.md  fix-failing-tests.md  fix-lua-error.md  fix-threading-issue.md  flesh-out-example.md  generate-roadmap-phase-from-description.md  implement-lua-api-module.md  implement-roadmap-phase.md  (+18 more)
.cargo/: config.toml
.config/: nextest.toml
.github/: copilot-instructions.md  copilot-instructions2.md
.github/agents/: README.md  analyst.agent.md  architect.agent.md  (+28 more)
demos/: README.md
docs/: CHANGELOG.md  agent-skill-reduction-proposal.md  api.md  api_data.json  api_generated.md  architecture.md  design-assumptions.md  ecosystem-implementation-plan.md  ecosystem-recommendations.md  genres.txt  getting_started.md  handbook.md  lua-api.md  lua_api_automation.md  lua_api_reference.md  lua_api_reference_generated.md  lurek.lua  roadmap.md  rust-api.md  test-docs.md  test-structure-audit.md
examples/: README.md  ai.lua  animation.lua  automation.lua  camera.lua  compute.lua  docs.lua  entity.lua  event.lua  filesystem.lua  fx.lua  graph.lua  graphics.lua  image.lua  input.lua  light.lua  minimap.lua  modding.lua  network.lua  particle.lua  pathfinding.lua  physics.lua  pipeline.lua  procgen.lua  raycaster.lua  savegame.lua  scene.lua  serial.lua  terminal.lua  thread.lua  tilemap.lua  timer.lua  window.lua
ideas/: hardcoded-generic-review.md  linux-build-and-distribution-guide.md  province-map-rendering-architecture.md  tween.md
logs/: doc_coverage.json  docs_overlay.json  docstring_audit.json  lua_api_data.json  lua_api_test_coverage.json  rust_api_data.json  test_coverage.json  unit_test_coverage.json
save/: _test_temp.txt
specs/: README.md  ai.md  animation.md  audio.md  automation.md  camera.md  compute.md  data.md  dataframe.md  debugbridge.md  devtools.md  docs.md  engine.md  entity.md  event.md  filesystem.md  fx.md  graph.md  graphics.md  gui.md  image.md  input.md  light.md  log.md  lua_api.md  math.md  minimap.md  modding.md  network.md  particle.md  pathfinding.md  patterns.md  physics.md  pipeline.md  procgen.md  raycaster.md  savegame.md  scene.md  serial.md  spine.md  (+5 more)
src/: README.md  gpu_renderer.rs  lib.rs  main.rs  renderer.rs
tests/: README.md  ai_tests.rs  audio_tests.rs  cardgame_tests.rs  combat_tests.rs  compute_tests.rs  config_tests.rs  crafting_tests.rs  data_stress_tests.rs  data_tests.rs  dataframe_tests.rs  demo_smoke_tests.rs  dialog_tests.rs  engine_tests.rs  event_tests.rs  examples_load_test.rs  filesystem_tests.rs  games_load_test.rs  golden_tests.rs  graphics_ext_tests.rs  graphics_tests.rs  image_tests.rs  input_tests.rs  inventory_tests.rs  lua_tests.rs  math_ext_tests.rs  math_tests.rs  minimap_tests.rs  modding_tests.rs  particle_tests.rs  pathfinding_tests.rs  physics_tests.rs  postfx_tests.rs  province_tests.rs  quest_tests.rs  resource_tests.rs  savegame_tests.rs  scene_tests.rs  sound_tests.rs  stats_tests.rs  (+4 more)
tools/: README.md  _audit_doc_gaps.py  _check_doc_coverage.py  _check_mojibake.py  _expand_cardgame.py  _expand_combat.py  _expand_crafting.py  _expand_inventory.py  _expand_quest.py  _expand_resource.py  _expand_stats.py  _find_thin_docs.py  _fix_all_expansions.py  _fix_api_reference.py  _fix_cardgame_tests.py  _fix_crafting_tests.py  _fix_crafting_tests2.py  _fix_crafting_tests3.py  _fix_round2.py  _verify_api_ref.py  _write_cardgame.py  _write_cardgame_api.py  _write_cardgame_tests.py  _write_combat_api.py  _write_combat_tests.py  _write_crafting_api.py  _write_crafting_tests.py  _write_domains.py  _write_quest_api.py  add_lua_docstrings.py  add_lua_docstrings_auto.py  cag_validate.py  check_callbacks.py  collect_docs.py  dist.ps1  doc_audit.py  doc_coverage.py  docstring_audit.py  docstring_fix.py  find_typed_params.py  (+31 more)
vscode-extension/: .vscodeignore2  CHANGELOG.md  README.md  README2.md  esbuild.config.mjs  language-configuration.json  luna-toolkit-0.9.0.vsix  package-lock.json  package.json
(+4817 files in other folders)
