[package]
name = "lurek2d"
version = "0.7.0"
edition = "2021"
description = "Lurek2D — A cross-platform 2D game engine powered by Rust and Lua"
license = "MIT"
authors = ["Lurek2D Team"]
readme = "README.md"

[features]
# LuaJIT — default scripting backend; JIT compilation for x86_64 desktop (Windows/Linux/macOS).
default = ["lua-jit"]
lua-jit = ["mlua/luajit", "mlua/vendored"]
# Lua 5.4 fallback — use on platforms where LuaJIT is unavailable (WASM, some ARM targets).
lua54 = ["mlua/lua54", "mlua/vendored"]

[dependencies]
# GPU-accelerated rendering — platform-split; see [target.'cfg(...)'.dependencies] sections near the end.
# Windows: DX12 (native API, best for low-end/iGPU). macOS: Metal. Linux: Vulkan.
# One backend per platform = smaller binary, no unused GPU driver code compiled in.

# Windowing and input (replaces minifb)
winit = "0.30"

# Safe cast for GPU vertex buffers
bytemuck = { version = "1", features = ["derive"] }

# Blocking executor for wgpu async init
pollster = "0.3"

# Lua scripting via mlua.
# Default: LuaJIT (JIT compiler, 2–5× faster, Lua 5.1 compatible).
# Fallback: enable the `lua54` Cargo feature for platforms where JIT is unsupported
#           (WASM/wasm32, some ARM bare-metal future targets).
# Build with LuaJIT:  cargo build                        (default)
# Build with Lua 5.4: cargo build --no-default-features --features lua54
mlua = { version = "0.9", default-features = false }

# Image loading — PNG only. JPEG and BMP decoders removed to reduce binary size.
# To re-enable: add "jpeg" or "bmp" back to features array.
image = { version = "0.24", default-features = false, features = ["png"] }
# DDS compressed texture format parsing
ddsfile = "0.5"

# Audio playback — OGG Vorbis + WAV only. FLAC (claxon) and MP3 (minimp3) decoders removed.
# To re-enable: add "flac" or "mp3" back to features array.
rodio = { version = "0.17", default-features = false, features = ["wav", "vorbis"] }

# MIDI file parsing — disabled; midly removed to reduce binary size.
# Re-enable: restore `midly = "0.5"` here and uncomment code in src/audio/midi_player.rs

# Logging
log = "0.4"
# Disable auto-color (termcolor), humantime, and regex — all unnecessary in a release binary.
env_logger = { version = "0.10", default-features = false, features = ["humantime"] }

# Error handling (derive macros for idiomatic Rust errors)
thiserror = "1"

# Fast, high-quality random number generation
fastrand = "2"

# 2D rigid-body physics engine
rapier2d = "0.32"

# Gamepad hardware input (cross-platform, includes bundled SDL_GameControllerDB)
gilrs = "0.11"

# Pure Rust ENet networking (reliable UDP, channels, sequencing)
rusty_enet = "0.4"

# Generational ID-based resource pools
slotmap = "1"

# Data compression
flate2 = "1"
lz4_flex = "0.11"

# Cryptographic hashing
sha2 = "0.10"
sha1 = "0.10"
md-5 = "0.10"

# Encoding
base64 = "0.22"
hex = "0.4"

# XML parsing for TMX Tiled map format
roxmltree = "0.20"

# Serialization framework (config, save data, game state)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CSV parsing and encoding
csv = "1"

# YAML removed — use TOML instead (design-assumption B-05). serde_yml dep dropped.

# Ordered map (insertion-order preserved) for serial module
indexmap = "2"

# TOML parsing and encoding
toml = "0.8"

# Platform-specific directories (save data, config paths)
directories = "5"

# Cross-platform system info (CPU count, memory size)
sysinfo = { version = "0.30", default-features = false }

# Cross-platform preferred locale detection
sys-locale = "0.3"

# Cross-platform clipboard access
arboard = "3"

# Cross-platform native file/message dialogs
rfd = "0.14"

# Zip archive reading for .lurek game packages
zip = { version = "2", default-features = false, features = ["deflate"] }

# Temporary directory management (used for .lurek extraction at runtime)
tempfile = "3"

[dev-dependencies]

[target.'cfg(windows)'.dependencies]
# Windows message box for panic handler
windows-sys = { version = "0.59", features = ["Win32_UI_WindowsAndMessaging"] }
# DX12 only — native Windows graphics API, best driver support for low-end/iGPU on Windows 10+.
# Removing metal and vulkan-portability drops unused backend code from the Windows binary.
wgpu = { version = "22", default-features = false, features = ["wgsl", "dx12"] }

[target.'cfg(target_os = "macos")'.dependencies]
# Metal only — native macOS graphics API.
wgpu = { version = "22", default-features = false, features = ["wgsl", "metal"] }

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
# Vulkan (with portability extension) — for Linux desktop.
wgpu = { version = "22", default-features = false, features = ["wgsl", "vulkan-portability"] }

[build-dependencies]
# Windows .exe icon + version-info embedding (only active on Windows targets)
winresource = "0.1"

[[bin]]
name = "lurek2d"
path = "src/main.rs"

[lib]
name = "lurek2d"
path = "src/lib.rs"

[profile.dev]
# opt-level 1 keeps game code debuggable while feeling reasonably smooth.
# incremental = true speeds up rebuilds.
# debug = "line-tables-only" preserves file/line info for backtraces and
# basic debugger step-through, but drops full DWARF variable metadata —
# saves ~15–20 MB vs debug = true. Use debug = true locally when you need
# to inspect variables in a debugger (does not affect release builds).
opt-level = 1
incremental = true
debug = "line-tables-only"

# Optimize all dependencies even in debug mode (common fast-iteration pattern)
# Gives near-release performance for deps while keeping game code debuggable
[profile.dev.package."*"]
opt-level = 3

[profile.release]
# Size + throughput: opt-level=z minimises binary size while LTO/codegen-units=1 maximises
# dead-code elimination. strip+panic=abort remove unwinder and debug info.
# overflow checks disabled for speed — the debug build catches those first.
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"
overflow-checks = false
debug = false

# Size-optimised distribution profile: cargo build --profile dist
# Trades some runtime speed for a smaller binary (~20–30% smaller than release).
# Build time is shorter than fat-LTO; thin LTO is a good balance.
[profile.dist]
inherits = "release"
opt-level = "s"         # optimise for size (avoids excessive inlining)
lto = "thin"            # thin LTO: fast cross-crate dead-code elimination

[[test]]
name = "compute_stress_tests"
path = "tests/rust/stress/compute_stress_tests.rs"

[[test]]
name = "data_stress_tests"
path = "tests/rust/stress/data_stress_tests.rs"

[[test]]
name = "image_stress_tests"
path = "tests/rust/stress/image_stress_tests.rs"

[[test]]
name = "physics_stress_tests"
path = "tests/rust/stress/physics_stress_tests.rs"

# === Unit tests ===
[[test]]
name = "automation_tests"
path = "tests/rust/unit/automation_tests.rs"

[[test]]
name = "audio_tests"
path = "tests/rust/unit/audio_tests.rs"

[[test]]
name = "compute_tests"
path = "tests/rust/unit/compute_tests.rs"

[[test]]
name = "config_tests"
path = "tests/rust/config/config_tests.rs"

[[test]]
name = "data_tests"
path = "tests/rust/unit/data_tests.rs"

[[test]]
name = "serial_tests"
path = "tests/rust/unit/serial_tests.rs"

[[test]]
name = "dataframe_tests"
path = "tests/rust/unit/dataframe_tests.rs"

[[test]]
name = "engine_tests"
path = "tests/rust/unit/engine_tests.rs"

[[test]]
name = "messages_tests"
path = "tests/rust/unit/messages_tests.rs"
[[test]]
name = "entity_tests"
path = "tests/rust/unit/entity_tests.rs"

[[test]]
name = "event_tests"
path = "tests/rust/unit/event_tests.rs"

[[test]]
name = "filesystem_tests"
path = "tests/rust/unit/filesystem_tests.rs"

[[test]]
name = "devtools_tests"
path = "tests/rust/unit/devtools_tests.rs"

[[test]]
name = "log_tests"
path = "tests/rust/unit/log_tests.rs"

[[test]]
name = "localization_tests"
path = "tests/rust/unit/localization_tests.rs"

[[test]]
name = "patterns_tests"
path = "tests/rust/unit/patterns_tests.rs"

[[test]]
name = "graph_tests"
path = "tests/rust/unit/graph_tests.rs"

[[test]]
name = "graphics_tests"
path = "tests/rust/unit/graphics_tests.rs"

[[test]]
name = "gui_tests"
path = "tests/rust/unit/gui_tests.rs"

[[test]]
name = "image_tests"
path = "tests/rust/unit/image_tests.rs"

[[test]]
name = "input_tests"
path = "tests/rust/unit/input_tests.rs"

[[test]]
name = "light_tests"
path = "tests/rust/unit/light_tests.rs"

[[test]]
name = "math_tests"
path = "tests/rust/unit/math_tests.rs"

[[test]]
name = "modding_tests"
path = "tests/rust/unit/modding_tests.rs"

[[test]]
name = "network_tests"
path = "tests/rust/unit/network_tests.rs"

[[test]]
name = "procgen_tests"
path = "tests/rust/unit/procgen_tests.rs"

[[test]]
name = "raycaster_tests"
path = "tests/rust/unit/raycaster_tests.rs"


[[test]]
name = "particle_tests"
path = "tests/rust/unit/particle_tests.rs"

[[test]]
name = "fx_screen_tests"
path = "tests/rust/unit/fx_screen_tests.rs"

[[test]]
name = "pathfinding_tests"
path = "tests/rust/unit/pathfinding_tests.rs"

[[test]]
name = "physics_tests"
path = "tests/rust/unit/physics_tests.rs"

[[test]]
name = "pipeline_tests"
path = "tests/rust/unit/pipeline_tests.rs"

[[test]]
name = "fx_tests"
path = "tests/rust/unit/fx_tests.rs"

[[test]]
name = "postfx_tests"
path = "tests/rust/unit/postfx_tests.rs"

[[test]]
name = "terminal_tests"
path = "tests/rust/unit/terminal_tests.rs"

[[test]]
name = "savegame_tests"
path = "tests/rust/unit/savegame_tests.rs"

[[test]]
name = "scene_tests"
path = "tests/rust/unit/scene_tests.rs"

[[test]]
name = "spine_tests"
path = "tests/rust/unit/spine_tests.rs"

[[test]]
name = "audio_sound_tests"
path = "tests/rust/unit/audio_sound_tests.rs"

[[test]]
name = "thread_tests"
path = "tests/rust/unit/thread_tests.rs"

[[test]]
name = "tilemap_tests"
path = "tests/rust/unit/tilemap_tests.rs"

[[test]]
name = "timer_tests"
path = "tests/rust/unit/timer_tests.rs"

[[test]]
name = "window_tests"
path = "tests/rust/unit/window_tests.rs"

[[test]]
name = "debugbridge_tests"
path = "tests/rust/unit/debugbridge_tests.rs"

[[test]]
name = "docs_tests"
path = "tests/rust/unit/docs_tests.rs"

[[test]]
name = "ai_tests"
path = "tests/rust/unit/ai_tests.rs"

[[test]]
name = "animation_tests"
path = "tests/rust/unit/animation_tests.rs"
harness = true

[[test]]
name = "tween_tests"
path = "tests/rust/unit/tween_tests.rs"
harness = true

[[test]]
name = "camera_tests"
path = "tests/rust/unit/camera_tests.rs"
harness = true

[[test]]
name = "overlay_tests"
path = "tests/rust/unit/overlay_tests.rs"
harness = true

# === Extension tests ===
[[test]]
name = "graphics_ext_tests"
path = "tests/rust/ext/graphics_ext_tests.rs"

[[test]]
name = "math_ext_tests"
path = "tests/rust/ext/math_ext_tests.rs"

[[test]]
name = "terminal_demo_smoke_tests"
path = "tests/rust/ext/terminal_demo_smoke_tests.rs"

[[test]]
name = "graphics_runtime_smoke_tests"
path = "tests/rust/ext/graphics_runtime_smoke_tests.rs"

# === Game-system tests ===
# migration-state: ai_tests migrated from tests/rust/game/ to tests/rust/unit/

# migration-state: lua_api/combat_api.rs deleted; test disabled until Lua migration is complete
# [[test]]
# name = "combat_tests"
# path = "tests/rust/game/combat_tests.rs"

# migration-state: lua_api/battle_api.rs deleted; test disabled until Lua migration is complete
# [[test]]
# name = "battle_tests"
# path = "tests/rust/game/battle_tests.rs"

# migration-state: module moved to library/crafting/ (Lua); test disabled until Lua migration is complete
# [[test]]
# name = "crafting_tests"
# path = "tests/rust/game/crafting_tests.rs"

# migration-state: lua_api/inventory_api.rs deleted; test disabled until Lua migration is complete
# [[test]]
# name = "inventory_tests"
# path = "tests/rust/game/inventory_tests.rs"

# migration-state: lua_api/cardgame_api.rs deleted; test disabled until Lua migration is complete
# [[test]]
# name = "cardgame_tests"
# path = "tests/rust/game/cardgame_tests.rs"

[[test]]
name = "minimap_tests"
path = "tests/rust/game/minimap_tests.rs"

# migration-state: lua_api/quest_api.rs deleted; test disabled until Lua migration is complete
# [[test]]
# name = "quest_tests"
# path = "tests/rust/game/quest_tests.rs"

# migration-state: module moved to library/province_map/ (Lua); test disabled until Lua migration is complete
# [[test]]
# name = "province_map_tests"
# path = "tests/rust/game/province_map_tests.rs"

# migration-state: lua_api resource binding deleted; test disabled until Lua migration is complete
# [[test]]
# name = "resource_tests"
# path = "tests/rust/game/resource_tests.rs"

# migration-state: lua_api/stats_api.rs deleted; test disabled until Lua migration is complete
# [[test]]
# name = "stats_tests"
# path = "tests/rust/game/stats_tests.rs"

# unregistered - audit before activating; tests lurek.item + lurek.inventory integration
# [[test]]
# name = "inventory_item_tests"
# path = "tests/rust/game/inventory_item_tests.rs"

# unregistered - audit before activating; tests lurek.item.* API
# [[test]]
# name = "item_tests"
# path = "tests/rust/game/item_tests.rs"

# unregistered - audit before activating; imports deleted luna2d::province module (migration-state)
# [[test]]
# name = "province_tests"
# path = "tests/rust/game/province_tests.rs"

# === Harnesses ===
[[test]]
name = "golden_tests"
path = "tests/rust/golden/harness.rs"

[[test]]
name = "evidence_tests"
path = "tests/rust/golden/evidence.rs"

[[test]]
name = "lua_tests"
path = "tests/lua/harness.rs"

# === Security / boundary tests ===
[[test]]
name = "security_tests"
path = "tests/rust/security/security_tests.rs"

