[package]
name = "lurek2d"
version = "0.7.0"
edition = "2021"
description = "Lurek2D — A cross-platform 2D game engine powered by Rust and Lua"
license = "MIT"
authors = ["Lurek2D Team"]
readme = "README.md"

[features]
# LuaJIT — default scripting backend; JIT compilation for x86_64 desktop (Windows/Linux/macOS).
default = ["lua-jit"]
lua-jit = ["mlua/luajit", "mlua/vendored"]
# Lua 5.4 fallback — use on platforms where LuaJIT is unavailable (WASM, some ARM targets).
lua54 = ["mlua/lua54", "mlua/vendored"]

[dependencies]
# GPU-accelerated rendering — platform-split; see [target.'cfg(...)'.dependencies] sections near the end.
# Windows: DX12 (native API, best for low-end/iGPU). macOS: Metal. Linux: Vulkan.
# One backend per platform = smaller binary, no unused GPU driver code compiled in.

# Windowing and input (replaces minifb)
winit = "0.30"

# Safe cast for GPU vertex buffers
bytemuck = { version = "1", features = ["derive"] }

# Blocking executor for wgpu async init
pollster = "0.3"

# Lua scripting via mlua.
# Default: LuaJIT (JIT compiler, 2–5× faster, Lua 5.1 compatible).
# Fallback: enable the `lua54` Cargo feature for platforms where JIT is unsupported
#           (WASM/wasm32, some ARM bare-metal future targets).
# Build with LuaJIT:  cargo build                        (default)
# Build with Lua 5.4: cargo build --no-default-features --features lua54
mlua = { version = "0.9", default-features = false }

# Image loading — PNG only. JPEG and BMP decoders removed to reduce binary size.
# To re-enable: add "jpeg" or "bmp" back to features array.
image = { version = "0.24", default-features = false, features = ["png"] }
# DDS compressed texture format parsing
ddsfile = "0.5"

# Audio playback — OGG Vorbis + WAV only. FLAC (claxon) and MP3 (minimp3) decoders removed.
# To re-enable: add "flac" or "mp3" back to features array.
rodio = { version = "0.17", default-features = false, features = ["wav", "vorbis"] }

# MIDI file parsing — disabled; midly removed to reduce binary size.
# Re-enable: restore `midly = "0.5"` here and uncomment code in src/audio/midi_player.rs

# Logging
log = "0.4"
# Disable auto-color (termcolor), humantime, and regex — all unnecessary in a release binary.
env_logger = { version = "0.10", default-features = false, features = ["humantime"] }

# Error handling (derive macros for idiomatic Rust errors)
thiserror = "1"

# Fast, high-quality random number generation
fastrand = "2"

# 2D rigid-body physics engine
rapier2d = "0.32"

# Gamepad hardware input (cross-platform, includes bundled SDL_GameControllerDB)
gilrs = "0.11"

# Pure Rust ENet networking (reliable UDP, channels, sequencing)
rusty_enet = "0.4"

# Generational ID-based resource pools
slotmap = "1"

# Data compression
flate2 = "1"
lz4_flex = "0.11"

# Cryptographic hashing
sha2 = "0.10"
sha1 = "0.10"
md-5 = "0.10"

# Encoding
base64 = "0.22"
hex = "0.4"

# XML parsing for TMX Tiled map format
roxmltree = "0.20"

# Serialization framework (config, save data, game state)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CSV parsing and encoding
csv = "1"

# YAML removed — use TOML instead (design-assumption B-05). serde_yml dep dropped.

# Ordered map (insertion-order preserved) for serial module
indexmap = "2"

# TOML parsing and encoding
toml = "0.8"

# Platform-specific directories (save data, config paths)
directories = "5"

# Cross-platform system info (CPU count, memory size)
sysinfo = { version = "0.30", default-features = false }

# Cross-platform preferred locale detection
sys-locale = "0.3"

# Cross-platform clipboard access
arboard = "3"

# Cross-platform native file/message dialogs
rfd = "0.14"

# Zip archive reading for .lurek game packages
zip = { version = "2", default-features = false, features = ["deflate"] }

# Temporary directory management (used for .lurek extraction at runtime)
tempfile = "3"

[dev-dependencies]

[target.'cfg(windows)'.dependencies]
# Windows message box for panic handler
windows-sys = { version = "0.59", features = ["Win32_UI_WindowsAndMessaging"] }
# DX12 only — native Windows graphics API, best driver support for low-end/iGPU on Windows 10+.
# Removing metal and vulkan-portability drops unused backend code from the Windows binary.
wgpu = { version = "22", default-features = false, features = ["wgsl", "dx12"] }

[target.'cfg(target_os = "macos")'.dependencies]
# Metal only — native macOS graphics API.
wgpu = { version = "22", default-features = false, features = ["wgsl", "metal"] }

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
# Vulkan (with portability extension) — for Linux desktop.
wgpu = { version = "22", default-features = false, features = ["wgsl", "vulkan-portability"] }

[build-dependencies]
# Windows .exe icon + version-info embedding (only active on Windows targets)
winresource = "0.1"

[[bin]]
name = "lurek2d"
path = "src/main.rs"

[lib]
name = "lurek2d"
path = "src/lib.rs"

[profile.dev]
# opt-level 1 keeps game code debuggable while feeling reasonably smooth.
# incremental = true speeds up rebuilds.
# debug = "line-tables-only" preserves file/line info for backtraces and
# basic debugger step-through, but drops full DWARF variable metadata —
# saves ~15–20 MB vs debug = true. Use debug = true locally when you need
# to inspect variables in a debugger (does not affect release builds).
opt-level = 1
incremental = true
debug = "line-tables-only"
# split-debuginfo = "packed" keeps debug info in a side PDB/.dwo file,
# which reduces the amount of data the linker has to copy each rebuild.
split-debuginfo = "packed"

# Optimize all dependencies even in debug mode (common fast-iteration pattern)
# Gives near-release performance for deps while keeping game code debuggable
[profile.dev.package."*"]
opt-level = 3

[profile.release]
# Size + throughput: opt-level=z minimises binary size while LTO/codegen-units=1 maximises
# dead-code elimination. strip+panic=abort remove unwinder and debug info.
# overflow checks disabled for speed — the debug build catches those first.
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"
overflow-checks = false
debug = false

# Size-optimised distribution profile: cargo build --profile dist
# Inherits all release settings (opt-level=z, fat LTO, strip, panic=abort).
# Explicitly re-states key settings for clarity; no weaker overrides.
[profile.dist]
inherits = "release"
# opt-level, lto, codegen-units, strip, panic all inherited from release.
# Nothing overridden — release is already maximum size optimisation.

[[test]]
name = "golden_tests"
path = "tests/rust/golden/harness.rs"

[[test]]
name = "evidence_tests"
path = "tests/rust/golden/evidence.rs"

[[test]]
name = "lua_tests"
path = "tests/lua/harness.rs"

# === Security / boundary tests ===
[[test]]
name = "security_tests"
path = "tests/rust/security/security_tests.rs"

