[package]
name = "lurek2d"
version = "1.0.0"
edition = "2021"
description = "Lurek2D — A cross-platform 2D game engine powered by Rust and Lua"
license = "MIT"
authors = ["Lurek2D Team"]
readme = "README.md"

[features]
# LuaJIT — default scripting backend; JIT compilation for x86_64 desktop (Windows/Linux/macOS).
default = ["lua-jit"]
lua-jit = ["mlua/luajit", "mlua/vendored"]
# Lua 5.4 fallback — use on platforms where LuaJIT is unavailable (WASM, some ARM targets).
lua54 = ["mlua/lua54", "mlua/vendored"]

[dependencies]
# GPU-accelerated rendering — platform-split; see [target.'cfg(...)'.dependencies] sections near the end.
# Windows: DX12 (native API, best for low-end/iGPU). macOS: Metal. Linux: Vulkan.
# One backend per platform = smaller binary, no unused GPU driver code compiled in.

# Windowing and input (replaces minifb)
winit = "0.30"

# Safe cast for GPU vertex buffers
bytemuck = { version = "1", features = ["derive"] }

# Blocking executor for wgpu async init
pollster = "0.3"

# Lua scripting via mlua.
# Default: LuaJIT (JIT compiler, 2–5× faster, Lua 5.1 compatible).
# Fallback: enable the `lua54` Cargo feature for platforms where JIT is unsupported
#           (WASM/wasm32, some ARM bare-metal future targets).
# Build with LuaJIT:  cargo build                        (default)
# Build with Lua 5.4: cargo build --no-default-features --features lua54
mlua = { version = "0.9", default-features = false }

# Image loading — PNG only. JPEG and BMP decoders removed to reduce binary size.
# To re-enable: add "jpeg" or "bmp" back to features array.
image = { version = "0.24", default-features = false, features = ["png"] }
# DDS compressed texture format parsing
ddsfile = "0.5"

# Audio playback — OGG Vorbis + WAV only. FLAC (claxon) and MP3 (minimp3) decoders removed.
# To re-enable: add "flac" or "mp3" back to features array.
rodio = { version = "0.17", default-features = false, features = ["wav", "vorbis"] }

# MIDI file parsing — disabled; midly removed to reduce binary size.
# Re-enable: restore `midly = "0.5"` here and uncomment code in src/audio/midi_player.rs

# Logging
log = "0.4"
# Disable auto-color (termcolor), humantime, and regex — all unnecessary in a release binary.
env_logger = { version = "0.10", default-features = false, features = ["humantime"] }

# Error handling (derive macros for idiomatic Rust errors)
thiserror = "1"

# Fast, high-quality random number generation
fastrand = "2"

# 2D rigid-body physics engine
rapier2d = { version = "0.32", features = ["parallel"] }

# Data parallelism — used in DepthSorter::sort_parallel for >10k depth entries.
# rapier2d already brings rayon transitively via its "parallel" feature, but
# we declare it explicitly so the crate can use rayon::prelude directly.
rayon = "1"

# Gamepad hardware input (cross-platform, includes bundled SDL_GameControllerDB)
gilrs = "0.11"

# Pure Rust ENet networking (reliable UDP, channels, sequencing)
rusty_enet = "0.4"

# HTTP client (pure Rust, minimal deps, uses rustls for TLS)
# HTTP client for Lua network API
# native-tls uses Windows SChannel (system-provided) — eliminates ring + rustls (~1.5 MB).
# gzip: keep for transparent Content-Encoding support (flate2 already a direct dep, no cost).
ureq = { version = "3", default-features = false, features = ["native-tls", "gzip"] }

# WebSocket client (RFC 6455 compliant, pure Rust)
tungstenite = "0.26"

# MessagePack binary serialization for compact network messages
rmp-serde = "1"

# Generational ID-based resource pools
slotmap = "1"

# Data compression
flate2 = "1"
lz4_flex = "0.11"

# Cryptographic hashing
sha2 = "0.10"
sha1 = "0.10"
md-5 = "0.10"
crc32fast = "1"

# Encoding
base64 = "0.22"
hex = "0.4"

# XML parsing for TMX Tiled map format
roxmltree = "0.20"

# Serialization framework (config, save data, game state)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CSV parsing and encoding
csv = "1"

# YAML removed — use TOML instead (design-assumption B-05). serde_yml dep dropped.

# Ordered map (insertion-order preserved) for serial module
indexmap = "2"

# TOML parsing and encoding
toml = "0.8"

# Platform-specific directories (save data, config paths)
directories = "6"

# Cross-platform system info (CPU count, memory size)
sysinfo = { version = "0.30", default-features = false }

# Cross-platform preferred locale detection
sys-locale = "0.3"

# Cross-platform clipboard access
# default-features = false: disables `image-data` feature (image 0.25 + moxcms + pxfm)
# We only use text clipboard (get_text / set_text) — image copy/paste is not needed.
arboard = { version = "3", default-features = false }

# Cross-platform native file/message dialogs
rfd = "0.17"

# Zip archive reading for .lurek game packages
zip = { version = "2", default-features = false, features = ["deflate"] }

# Temporary directory management (used for .lurek extraction at runtime)
tempfile = "3"
tobj = "4"

[dev-dependencies]

[target.'cfg(windows)'.dependencies]
# Windows message box for panic handler
# Using 0.61 to match tempfile/winapi-util — reduces duplication in the windows-sys tree.
windows-sys = { version = "0.61", features = ["Win32_UI_WindowsAndMessaging", "Win32_Media"] }
# DX12 only — native Windows graphics API, best driver support for low-end/iGPU on Windows 10+.
# Removing metal and vulkan-portability drops unused backend code from the Windows binary.
wgpu = { version = "22", default-features = false, features = ["wgsl", "dx12"] }

[target.'cfg(target_os = "macos")'.dependencies]
# Metal only — native macOS graphics API.
wgpu = { version = "22", default-features = false, features = ["wgsl", "metal"] }

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
# Vulkan (with portability extension) — for Linux desktop.
wgpu = { version = "22", default-features = false, features = ["wgsl", "vulkan-portability"] }

[build-dependencies]
# Windows .exe icon + version-info embedding (only active on Windows targets)
winresource = "0.1"

[[bin]]
name = "lurek2d"
path = "src/main.rs"

[lib]
name = "lurek2d"
path = "src/lib.rs"

[profile.dev]
# FASTEST COMPILE — all settings tuned for minimum wall-clock build time.
# opt-level = 0: no compiler optimizations; code is slow to run but fast to compile.
# incremental = false: Windows MSVC link stability (lua_tests link crashes).
# debug = 2: full DWARF — variable values, type info, step-into; best debugger UX.
# codegen-units = 256: maximum parallel code generation units = fastest compile.
opt-level = 0
incremental = false
debug = 2
codegen-units = 256

# Compile dependencies at opt-level 1 — avoids slow dep compiles (proc-macros,
# wgpu internals) while keeping game code debuggable at opt-level 0 above.
[profile.dev.package."*"]
opt-level = 1

[profile.release]
# MAXIMUM PERFORMANCE — opt-level=3 enables full inlining, loop unrolling, and
# all LLVM optimizations. Binary is larger (~32 MB raw) but runs fastest.
# lto="fat" + codegen-units=1 = whole-program dead-code elimination.
# strip=true + panic=abort remove all symbol tables and unwind machinery.
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
overflow-checks = false
debug = false

# DISTRIBUTION profile — inherits everything from release (opt-level=3, fat LTO,
# strip, panic=abort). dist.ps1 applies UPX --best on top → ~8-9 MB package.
[profile.dist]
inherits = "release"

[[test]]
name = "examples_load_test"
path = "tests/examples_load_test.rs"

[[test]]
name = "golden_tests"
path = "tests/rust/golden/harness.rs"

[[test]]
name = "gui_tests"
path = "tests/rust/unit/gui_tests.rs"

[[test]]
name = "lua_tests"
path = "tests/lua/harness.rs"

[[test]]
name = "scene_tests"
path = "tests/rust/unit/scene_tests.rs"

[[test]]
name = "patterns_tests"
path = "tests/rust/unit/patterns_tests.rs"

[[test]]
name = "physics_tests"
path = "tests/rust/unit/physics_tests.rs"

[[test]]
name = "tilemap_tests"
path = "tests/rust/unit/tilemap_tests.rs"

[[test]]
name = "pathfind_tests"
path = "tests/rust/unit/pathfind_tests.rs"

[[test]]
name = "animation_tests"
path = "tests/rust/unit/animation_tests.rs"

[[test]]
name = "app_tests"
path = "tests/rust/unit/app_tests.rs"

[[test]]
name = "audio_tests"
path = "tests/rust/unit/audio_tests.rs"

[[test]]
name = "camera_tests"
path = "tests/rust/unit/camera_tests.rs"

[[test]]
name = "compute_tests"
path = "tests/rust/unit/compute_tests.rs"

[[test]]
name = "data_tests"
path = "tests/rust/unit/data_tests.rs"

[[test]]
name = "dataframe_tests"
path = "tests/rust/unit/dataframe_tests.rs"

[[test]]
name = "debugbridge_tests"
path = "tests/rust/unit/debugbridge_tests.rs"

[[test]]
name = "ecs_tests"
path = "tests/rust/unit/ecs_tests.rs"

[[test]]
name = "effect_tests"
path = "tests/rust/unit/effect_tests.rs"

[[test]]
name = "event_tests"
path = "tests/rust/unit/event_tests.rs"

[[test]]
name = "filesystem_tests"
path = "tests/rust/unit/filesystem_tests.rs"

[[test]]
name = "graph_tests"
path = "tests/rust/unit/graph_tests.rs"

[[test]]
name = "i18n_tests"
path = "tests/rust/unit/i18n_tests.rs"

[[test]]
name = "image_tests"
path = "tests/rust/unit/image_tests.rs"

[[test]]
name = "input_tests"
path = "tests/rust/unit/input_tests.rs"

[[test]]
name = "light_tests"
path = "tests/rust/unit/light_tests.rs"

[[test]]
name = "log_tests"
path = "tests/rust/unit/log_tests.rs"

[[test]]
name = "math_tests"
path = "tests/rust/unit/math_tests.rs"

[[test]]
name = "minimap_tests"
path = "tests/rust/unit/minimap_tests.rs"

[[test]]
name = "network_tests"
path = "tests/rust/unit/network_tests.rs"

[[test]]
name = "parallax_tests"
path = "tests/rust/unit/parallax_tests.rs"

[[test]]
name = "particle_tests"
path = "tests/rust/unit/particle_tests.rs"

[[test]]
name = "pipeline_tests"
path = "tests/rust/unit/pipeline_tests.rs"

[[test]]
name = "procgen_tests"
path = "tests/rust/unit/procgen_tests.rs"

[[test]]
name = "province_tests"
path = "tests/rust/unit/province_tests.rs"

[[test]]
name = "raycaster_tests"
path = "tests/rust/unit/raycaster_tests.rs"

[[test]]
name = "render_tests"
path = "tests/rust/unit/render_tests.rs"

[[test]]
name = "runtime_tests"
path = "tests/rust/unit/runtime_tests.rs"

[[test]]
name = "save_tests"
path = "tests/rust/unit/save_tests.rs"

[[test]]
name = "serial_tests"
path = "tests/rust/unit/serial_tests.rs"

[[test]]
name = "spine_tests"
path = "tests/rust/unit/spine_tests.rs"

[[test]]
name = "sprite_tests"
path = "tests/rust/unit/sprite_tests.rs"

[[test]]
name = "terminal_tests"
path = "tests/rust/unit/terminal_tests.rs"

[[test]]
name = "thread_tests"
path = "tests/rust/unit/thread_tests.rs"

[[test]]
name = "timer_tests"
path = "tests/rust/unit/timer_tests.rs"

[[test]]
name = "tween_tests"
path = "tests/rust/unit/tween_tests.rs"

[[test]]
name = "ui_tests"
path = "tests/rust/unit/ui_tests.rs"

[[test]]
name = "window_tests"
path = "tests/rust/unit/window_tests.rs"

[[test]]
name = "demo_smoke_tests"
path = "tests/demo_smoke_tests.rs"

